Footer moved to a PHP file, page content now stretches properly, other minor CSS fixes

--- a/css/main.css
+++ b/css/main.css
@@ -37,21 +37,25 @@ div {
 	font-weight: bold;
 }
 
-.content {
-	border: 3px solid #404040;
-	border-radius: 15px;
-	padding: 10px;
-	height: 300px;
-}
-
 .home-header {
 	float: left;
 	border: 3px solid #404040;
 	border-radius: 15px;
 	padding: 10px;
 	width: 150px;
-	height: 300px;
 	font-weight: bold;
+}
+
+.content {
+	border: 3px solid #404040;
+	border-radius: 15px;
+	padding: 10px;
+	flex-basis: 100%;
+}
+
+.linedUp {
+	display: flex;
+	justify-content: center;
 }
 
 a:link, a:visited {
